force-app/main/default/objects/Space__c/Space__c.object-meta.xml
<CustomObject>
    <label>Space</label>
    <nameField>
        <label>Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>