force-app/main/default/objects/Space__c/fields/Predicted_Book_Rate__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Book_Rate__c</fullName>
    <label>Predicted Book Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>