force-app/main/default/objects/Space__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types</valueSetName>
    </valueSet>
</CustomField>